2003-12-08 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCopt.c (killDeadCode): change iCode type to DUMMY_READ_VOLATILE
	instead of deleting the iCode when an operand is volatile
	* src/z80/gen.c (genDummyRead),
	* src/mcs51/gen.c (genDummyRead),
	* src/ds390/gen.c (genDummyRead),
	* src/hc08/gen.c (genDummyRead): handle operands in IC_LEFT and/or IC_RIGHT,
	not just IC_RIGHT
	* src/SDCCicode.c (geniCodeCall): fixed bug #851607
	* src/SDCC.y: fixed bug #850420

2003-12-05 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Applied z80 i/o port patch from Peter Townson and fixed some operators
	to better handle operands in A register.
	* device/include/z180.h
	* src/SDCC.y
	* src/SDCCglue.c
	* src/z80/gen.c
	* src/z80/gen.h
	* src/z80/main.c
	* src/z80/peeph-z80.def
	* src/z80/peeph.def
	* src/z80/z80.h

2003-12-03 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCsymt.c (addSymChain, compareTypeExact): fixed bug #838241 again

2003-12-01 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* device/lib/hc08/_mullong.c: Removed extra #endif

2003-12-01 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/inst.cc,
	* sim/ucsim/hc08.src/hc08mac.h: fixed some problems with CC flag bits and
	carries from x to h
	* src/hc08/gen.c (aopAdrStr): fixed problem with 16 bit immediate
	* src/hc08/gen.c (XAccRsh): fixed problem with right shift
	* device/include/stdarg.h: fixed varargs for hc08
	* device/lib/Makefile.in,
	* device/lib/hc08/Makefile,
	* device/lib/hc08/_mulint.c,
	* device/lib/hc08/_mullong.c: fixed some endian problems

2003-11-28 Frieder Ferlemann <Frieder.Ferlemann@web.de>

	* sdcc/src/mcs51/gen.c (genMultOneByte): help peephole 105
	* sdcc/src/mcs51/peeph.def: added peephole 186.e array access in code space
	* device/lib/_gptrget.c,
	* device/lib/_gptrput.c: P2 not used any more (related to #850747, #785979)

2003-11-27 Erik Petrich <epetrich@ivorytower.norman.ok.us>
